# mediaman

mediaman/: package-lock.json  package.json  tailwind.config.cjs
mediaman-api/: .gitignore  pyproject.toml
mediaman-api/mediaman_api/: database.py  main.py  utils.py  youtube.py
mediaman-api/mediaman_api/models/: channel.py  video.py
mediaman-api/mediaman_api/routes/: channel.py
mediaman-api/mock_data/: channel_info.json  channel_thumbnail.json  raw_channel_info.json  raw_channel_library.json  video.json
mediaman-api/tests/: data.py  test_utils.py  test_youtube.py
mediaman-api/tests/models/: test_channel.py
mediaman-api/tests/routers/: test_follow_channel.py  test_search_channel.py
mediaman/src/: app.css
mediaman/src/lib/: ChannelOverview.svelte  api.ts  types.ts  utils.ts
mediaman/src/routes/: __layout.svelte  add.svelte  channels.svelte  index.svelte
